--- a/app/src/main/res/navigation/navigation_basic_user.xml
+++ b/app/src/main/res/navigation/navigation_basic_user.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- Created by ChazzCoin : December 2019 -->
+<!-- Created by ChazzCoin : October 2022 -->
 
 <!-- FOOD TRUCK MANAGER NAVIGATION -->
 
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation_foodtruck_manager"
+    android:id="@+id/navigation_master"
     app:startDestination="@+id/navigation_dashboard">
 
     <fragment
@@ -19,7 +19,18 @@
         android:id="@+id/navigation_dashboard"
         android:name="io.usys.report.ui.fragments.DashboardFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard">
+        <action
+            android:id="@+id/action_pop"
+            app:destination="@id/navigation_pop_frag"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@+id/navigation_pop_frag"
+            app:popUpToInclusive="true">
+        </action>
+    </fragment>
     <fragment
         android:id="@+id/navigation_cart"
         android:name="io.usys.report.ui.calendar.FoodCalendarFragment"
@@ -47,8 +58,15 @@
         tools:layout="@layout/fragment_user_profile" />
 
     <fragment
+        android:id="@+id/navigation_pop_frag"
+        android:name="io.usys.report.ui.fragments.PopFragment"
+        android:label="PopUp"
+        tools:layout="@layout/fragment_pop">
+    </fragment>
+
+    <fragment
         android:id="@+id/navigation_base_frag"
-        android:name="io.usys.report.ui.YsrFragment"
+        android:name="io.usys.report.ui.fragments.YsrFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_org_list">
     </fragment>
