--- a/app/src/main/res/layout/dialog_player_profile_layout.xml
+++ b/app/src/main/res/layout/dialog_player_profile_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/reviewRootCard"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="10dp"
     app:cardBackgroundColor="@color/ysrWindowBackground"
     app:cardCornerRadius="10dp"
@@ -12,12 +12,12 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/reviewMainLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="#00FFFFFF">
 
             <!-- Tryout Tag -->
@@ -54,16 +54,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/btnPlayerDialogSendOffer" />
 
             <!--            <include-->
-<!--                android:id="@+id/includeYsrListViewNotes"-->
-<!--                layout="@layout/ysr_add_attributes"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintHorizontal_bias="0.0"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toBottomOf="@+id/includePlayerProfileHeader"-->
-<!--                app:layout_constraintVertical_bias="0.0" />-->
+            <!--                android:id="@+id/includeYsrListViewNotes"-->
+            <!--                layout="@layout/ysr_add_attributes"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintHorizontal_bias="0.0"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/includePlayerProfileHeader"-->
+            <!--                app:layout_constraintVertical_bias="0.0" />-->
 
 
             <Button
@@ -80,10 +80,10 @@
             <io.usys.report.ui.views.LudiCustomAttributesList
                 android:id="@+id/includeYsrListViewNotes"
                 android:layout_width="0dp"
-                android:layout_height="500dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/includePlayerProfileHeader"
                 app:layout_constraintVertical_bias="0.0">
@@ -100,21 +100,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_menu_preferences" />
-
-            <ImageButton
-                android:id="@+id/btnUploadImagePlayerProfile"
-                android:layout_width="69dp"
-                android:layout_height="55dp"
-                android:layout_marginStart="12dp"
-                android:background="#00FFFFFF"
-                android:scaleType="centerCrop"
-                app:layout_constraintBottom_toBottomOf="@+id/includePlayerProfileHeader"
-                app:layout_constraintEnd_toStartOf="@+id/btnPlayerDialogCreateEval"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/includePlayerProfileHeader"
-                app:layout_constraintTop_toTopOf="@+id/includePlayerProfileHeader"
-                app:layout_constraintVertical_bias="0.311"
-                app:srcCompat="@drawable/add_light" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
