--- a/app/src/main/res/layout/ysr_item_field_value.xml
+++ b/app/src/main/res/layout/ysr_item_field_value.xml
@@ -4,35 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#00FFFFFF">
+    android:layout_margin="2dp">
 
     <TextView
         android:id="@+id/ysrTxtItemFieldName"
         android:layout_width="0dp"
         android:layout_height="25dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
         android:background="#00FFFFFF"
         android:gravity="bottom"
+        android:singleLine="false"
         android:text="Field Name"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ysrEditItemFieldValue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/ysrEditItemFieldValue"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="2dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
-        android:gravity="bottom"
+        android:gravity="center|center_vertical"
         android:inputType="textPersonName"
         android:lines="1"
         android:singleLine="false"
         android:text="Value"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/ysrTxtItemFieldName"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ysrTxtItemFieldName" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
