--- a/app/src/main/res/layout/ysr_item_add_attributes.xml
+++ b/app/src/main/res/layout/ysr_item_add_attributes.xml
@@ -6,7 +6,7 @@
     android:layout_height="45dp"
     android:layout_margin="2dp">
 
-    <TextView
+    <EditText
         android:id="@+id/ysrTxtItemFieldName"
         android:layout_width="197dp"
         android:layout_height="0dp"
@@ -17,6 +17,7 @@
         android:textAllCaps="true"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:background="@color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
