--- a/app/src/main/res/layout/ysr_title_list_view.xml
+++ b/app/src/main/res/layout/ysr_title_list_view.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<io.usys.report.ui.views.YsrTitleListView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<io.usys.report.ui.views.YsrTitleListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ysrTitleListView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ysrMainLayoutTitleListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/ysrTxtTitle"
@@ -37,11 +36,13 @@
             android:layout_marginTop="24dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="24dp"
+            android:paddingBottom="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ysrTxtTitle"
+            app:layout_constraintVertical_bias="0.0"
             tools:itemCount="2"
             tools:listitem="@layout/card_note_small">
 
