--- a/app/src/main/res/menu/floating_player_menu.xml
+++ b/app/src/main/res/menu/floating_player_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_player_accept"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:title="Finalize In Roster" />
+    <item
         android:id="@+id/menu_player_change_teams"
         android:title="Change Teams" />
     <item
